Portfolio update. Added images and dead links to portfolio. Styled portfolio. fixed spacing between sections of website.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,8 @@ input[type="checkbox"] {
 }
 
 #services h4,
-#about h4 {
+#about h4,
+#portfolio h4 {
     font-weight: 600;
     font-size: 2.5rem;
     margin-bottom: 2.5rem;
@@ -196,6 +197,7 @@ input[type="checkbox"] {
     clear: both;
     padding-left: 7%;
     padding-right: 7%;
+    padding-bottom: 13.3125rem;
 }
 
 #about h3 {
@@ -241,11 +243,33 @@ input[type="checkbox"] {
     color: #F5C915;
 }
 
+/* Portfolio Section Elements */
+
+.portfolio-header {
+    padding-left: 7%;
+}
+
+.portfolio-heading-para {
+    width: 5.5%;
+}
+
+.portfolio-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 100%;
+}
+
+.portfolio-image {
+    width: 100%;
+    
+}
+
 
 /* Contact Section elements */
 #contact-form {
     align-items: center;
     width: 100%;
+    padding-top: 6.75rem;
 }
 
 /* Header */
